--- a/index.html
+++ b/index.html
@@ -75,13 +75,10 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>Yashuuu</h1>
     <div id="root"></div>
-       
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <script src="./App.js">    </script>
+    <script type="module" src="./App.js">    </script>
 
 </body>
 </html>
