--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Yashuuu</h1>
+    <!-- <h1>Yashuuu</h1> -->
     <div id="root"></div>
 
     <script type="module" src="./App.js">    </script>
 
 </body>
 </html>
-
