--- a/index.html
+++ b/index.html
@@ -1,84 +1,16 @@
-<!-- Hello world using html -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <h1>Hello World...</h1>
-    </div>
-</body>
-</html> -->
-
-
-
-
-<!-- Hello world using Javascript -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="root"></div>
-    <script>
-        const heading = document.createElement("h1")
-        heading.innerHTML = "Hello World using Javascript"
-        
-        const root = document.getElementById("root")
-        root.append(heading)
-    </script>
-</body>
-</html> -->
-
-
-
-<!-- Hello world using React -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <div id="root"></div>
-       
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script>
-        const heading = React.createElement("h1", {}, "Hello World using React")
-        const root = ReactDOM.createRoot(document.getElementById("root"))
-        root.render(heading)
-    </script>
-
-</body>
-</html> -->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
-    <!-- <h1>Yashuuu</h1> -->
     <div id="root"></div>
 
-    <script type="module" src="./App.js">    </script>
+    <script type="module" src="./src/App.js">    </script>
 
 </body>
 </html>
